Project management cleanup