@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<!--
+  ~    Copyright 2021 Alexis Armin Huf
+  ~
+  ~    Licensed under the Apache License, Version 2.0 (the "License");
+  ~    you may not use this file except in compliance with the License.
+  ~    You may obtain a copy of the License at
+  ~
+  ~        http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~    Unless required by applicable law or agreed to in writing, software
+  ~    distributed under the License is distributed on an "AS IS" BASIS,
+  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~    See the License for the specific language governing permissions and
+  ~    limitations under the License.
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -10,6 +26,47 @@
   <packaging>pom</packaging>
 
   <name>rdfit-parent</name>
+  <description>Agnostic iteration over RDF triples/quads</description>
+  <url>https://github.com/lapesd/rdfit</url>
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>Alexis Armin Huf</name>
+      <email>alexishuf@gmail.com</email>
+      <url>https://github.com/alexishuf/</url>
+    </developer>
+  </developers>
+
+  <organization>
+    <name>LAPESD</name>
+    <url>http://lapesd.inf.ufsc.br/</url>
+  </organization>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>sonatype-nexus-snapshots</id>
+      <name>Sonatype Nexus Snapshots</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+    </snapshotRepository>
+    <repository>
+      <id>sonatype-nexus-staging</id>
+      <name>Nexus Release Repository</name>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
+
+  <scm>
+    <connection>scm:git:git://github.com/lapesd/rdfit.git</connection>
+    <developerConnection>scm:git:git@github.com:lapesd/rdfit.git</developerConnection>
+    <url>https://github.com/lapesd/rdfit</url>
+    <tag>HEAD</tag>
+  </scm>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,6 +74,9 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.plugin>3.8.0</maven.compiler.plugin>
     <maven.surefire.plugin>2.22.1</maven.surefire.plugin>
+    <rdfit.rdf4j.version>3.5.0</rdfit.rdf4j.version>
+    <rdfit.jena.version>3.13.1</rdfit.jena.version>
+    <rdfit.hdt.version>2.1.2</rdfit.hdt.version>
   </properties>
 
   <modules>
@@ -91,24 +151,4 @@
     </plugins>
   </build>
 
-  <profiles>
-    <profile>
-      <id>java9-onward</id>
-      <activation>
-        <jdk>[1.9,)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>
-                --add-opens java.base/java.lang=ALL-UNNAMED
-              </argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
