@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<!--
+  ~    Copyright 2021 Alexis Armin Huf
+  ~
+  ~    Licensed under the Apache License, Version 2.0 (the "License");
+  ~    you may not use this file except in compliance with the License.
+  ~    You may obtain a copy of the License at
+  ~
+  ~        http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~    Unless required by applicable law or agreed to in writing, software
+  ~    distributed under the License is distributed on an "AS IS" BASIS,
+  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~    See the License for the specific language governing permissions and
+  ~    limitations under the License.
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -18,28 +34,18 @@
     <dependency>
       <groupId>com.github.lapesd.rdfit</groupId>
       <artifactId>rdfit-core</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.28</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
-      <version>3.0.2</version>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
       <groupId>com.github.lapesd.rdfit</groupId>
       <artifactId>rdfit-rdf4j</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.rdf4j</groupId>
       <artifactId>rdf4j-rio-api</artifactId>
-      <version>3.5.0</version>
+      <version>${rdfit.rdf4j.version}</version>
     </dependency>
 
     <!-- The following dependencies are for the parsers and writers implementations in RDF4J
@@ -48,67 +54,67 @@
     <dependency>
       <groupId>org.eclipse.rdf4j</groupId>
       <artifactId>rdf4j-rio-binary</artifactId>
-      <version>3.5.0</version>
+      <version>${rdfit.rdf4j.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.rdf4j</groupId>
       <artifactId>rdf4j-rio-hdt</artifactId>
-      <version>3.5.0</version>
+      <version>${rdfit.rdf4j.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.rdf4j</groupId>
       <artifactId>rdf4j-rio-jsonld</artifactId>
-      <version>3.5.0</version>
+      <version>${rdfit.rdf4j.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.rdf4j</groupId>
       <artifactId>rdf4j-rio-n3</artifactId>
-      <version>3.5.0</version>
+      <version>${rdfit.rdf4j.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.rdf4j</groupId>
       <artifactId>rdf4j-rio-nquads</artifactId>
-      <version>3.5.0</version>
+      <version>${rdfit.rdf4j.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.rdf4j</groupId>
       <artifactId>rdf4j-rio-ntriples</artifactId>
-      <version>3.5.0</version>
+      <version>${rdfit.rdf4j.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.rdf4j</groupId>
       <artifactId>rdf4j-rio-rdfjson</artifactId>
-      <version>3.5.0</version>
+      <version>${rdfit.rdf4j.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.rdf4j</groupId>
       <artifactId>rdf4j-rio-rdfxml</artifactId>
-      <version>3.5.0</version>
+      <version>${rdfit.rdf4j.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.rdf4j</groupId>
       <artifactId>rdf4j-rio-trix</artifactId>
-      <version>3.5.0</version>
+      <version>${rdfit.rdf4j.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.rdf4j</groupId>
       <artifactId>rdf4j-rio-turtle</artifactId>
-      <version>3.5.0</version>
+      <version>${rdfit.rdf4j.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.rdf4j</groupId>
       <artifactId>rdf4j-rio-trig</artifactId>
-      <version>3.5.0</version>
+      <version>${rdfit.rdf4j.version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -120,26 +126,4 @@
     </dependency>
   </dependencies>
 
-  <profiles>
-    <profile>
-      <id>java9-onward</id>
-      <activation>
-        <jdk>[1.9,)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>${maven.surefire.plugin}</version>
-            <configuration>
-              <argLine>
-                --add-opens java.base/java.lang=ALL-UNNAMED
-              </argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
